<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".TitleFragment"
    android:background="@color/activity_background"
    android:fitsSystemWindows="true">

    <!-- 1️⃣ App Logo -->
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"

        android:src="@drawable/ttt_app_icon"
        android:contentDescription="@string/app_logo"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TitleStyle"

        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        android:text="@string/Main_Menu_title"

        app:layout_constraintBottom_toTopOf="@id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <Button
        android:id="@+id/play_button"
        style="@style/ButtonStyle"

        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        android:text="@string/Button_Start"

        app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"

        ads:adSize="BANNER"
        ads:adUnitId="[your own url]"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />
<!--      android:layout_alignParentBottom="true"-->
<!--      android:layout_centerHorizontal="true"-->
</androidx.constraintlayout.widget.ConstraintLayout>
